--- a/branches/Metallica/CheckM/CheckM.dproj
+++ b/branches/Metallica/CheckM/CheckM.dproj
@@ -74,7 +74,7 @@
         <VerInfo_Keys>CompanyName=Crystal Decisions Inc.;FileDescription=Crystal Reports 9 VCL;FileVersion=9.0.0.8;InternalName=TCrpe - TCrpeDS;LegalCopyright=©2001 - 2003 Crystal Decisions;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=9.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_Namespace>Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
@@ -139,9 +139,6 @@
                 <Source>
                     <Source Name="MainSource">CheckM.dpr</Source>
                 </Source>
-                <Language>
-                    <Language Name="RootDir">D:\Projects\GitHub\metallic-files\branches\Metallica\CheckM\</Language>
-                </Language>
                 <VersionInfo>
                     <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
                     <VersionInfo Name="AutoIncBuild">False</VersionInfo>
