--- a/branches/Metallica2/CheckM/params_default.ini
+++ b/branches/Metallica2/CheckM/params_default.ini
@@ -1,6 +1,6 @@
 // Этот файл создан программой CheckCom.exe ТОЛЬКО для переноса 
 // настроек между компьютерами. 
 HOSTNAME=localhost
-DATABASE=d:\Projects\DATABASE_ODS11.FDB
-PROTOCOL=
+DATABASE=C:\Projects\Metallica\Database\DATABASE.FDB
+PROTOCOL=interbase
 USERNAME=SYSDBA
